2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add copysign new tests.
	* tests/copysign.input: New file: copysign new tests input.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/libdfp-test-ulps: Update.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/libdfp-test-ulps: Update.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac: Add dfpu in front of fpu in sysdeps selection.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/fabsd128.c: New file: optimized fabsd128 for
	PowerPC.
	* sysdeps/powerpc/dfpu/fabsd64.c: New file: optimized fabsd64 for
	PowerPC.
	* sysdeps/powerpc/dfpu/fabsd32.c: New file: optimized fabsd32 for
	PowerPC.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add fabs new tests.
	* tests/fabs.input: New file: fabs new tests input.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add log1p new tests.
	* tests/log1p.input: New file: log1p new tests input.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add log10 new tests.
	* tests/log10.input: New file: log10 new tests input.
	* tests/test-log10d.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add exp new tests.
	* tests/exp.input: New file: exp new tests input.
	* tests/test-expd.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in: Remove superfluous echos and add rule to create
	libdfp-test-ulps.h file.
	(libdfp_c_tests): Add log tests.
	* sysdeps/generic/libdfp-test-ulps: New file.
	* sysdeps/powerpc/dfpu/libdfp-test-ulps: New file.
	* sysdeps/powerpc/fpu/libdfp-test-ulps: New file.
	* tests/gen-libdfp-tests.py: Add support to test with ULPs.